opam-version: "2.0"
version: "v0.17.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/async_kernel"
bug-reports: "https://github.com/janestreet/async_kernel/issues"
dev-repo: "git+https://github.com/janestreet/async_kernel.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/async_kernel/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"       {>= "5.1.0"}
  "core"        {>= "v0.17" & < "v0.18"}
  "core_kernel" {>= "v0.17" & < "v0.18"}
  "ppx_jane"    {>= "v0.17" & < "v0.18"}
  "dune"        {>= "3.11.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Monadic concurrency library"
description: "
Part of Jane Street's Core library
The Core suite of libraries is an industrial strength alternative to
OCaml's standard library that was developed by Jane Street, the
largest industrial user of OCaml.
"
